Bug 50631 - Vertical rulers completely unreadable on MacOS X
Summary: Vertical rulers completely unreadable on MacOS X
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: Other macOS (All)
: medium major
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:3.6.0.0.beta1 target:3.6.0 tar...
Keywords: regression
: 52083 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-03 03:36 UTC by Roman Eisele
Modified: 2013-07-11 10:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Unreadable vertical rulers in Writer (Master build 2012-06-02) (229.83 KB, image/png)
2012-06-03 03:38 UTC, Roman Eisele
Details
Unreadable vertical rulers in Impress (Master build 2012-06-02) (135.53 KB, image/png)
2012-06-03 03:39 UTC, Roman Eisele
Details
For comparison: readable vertical rulers in Writer (Master build 2012-05-24) (233.02 KB, image/png)
2012-06-03 03:40 UTC, Roman Eisele
Details
For comparison: readable vertical rulers in Impress (Master build 2012-05-24) (177.03 KB, image/png)
2012-06-03 03:41 UTC, Roman Eisele
Details
Unreadable vertical rulers in Writer (Master build 2012-06-06) (373.00 KB, image/png)
2012-06-06 11:04 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Eisele 2012-06-03 03:36:59 UTC
The vertical rulers are completely unreadable on MacOS X in the current Master build (= LOdev 3.6.0alpha1) dated 2012-06-02 (Build ID: bfa9061). Both in Writer and in Impress all numbers are missing, only some fragments of the figures are visible. I will attach two screenshots showing this.

This problem was not present in the Master build dated 2012-05-28, and, if I remember correctly, even not in the build dated 2012-05-28.

This makes it probable that the new problem is related to one of the last commits releated to UI/rulers, i.e. to

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac25f124858b79e302adcc533d6a658d5c529394

or to

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9311947aa0bbfda60af8f97d850d6e5b909d62b5

This is only an UI bug, but IMHO it is nevertheless a major bug, because it does not only make Writer and Impress look ugly, but it also makes the vertical rulers more or less useless on MacOS X.
Comment 1 Roman Eisele 2012-06-03 03:38:51 UTC
Created attachment 62439 [details]
Unreadable vertical rulers in Writer (Master build 2012-06-02)
Comment 2 Roman Eisele 2012-06-03 03:39:38 UTC
Created attachment 62440 [details]
Unreadable vertical rulers in Impress (Master build 2012-06-02)
Comment 3 Roman Eisele 2012-06-03 03:40:55 UTC
Created attachment 62441 [details]
For comparison: readable vertical rulers in Writer (Master build 2012-05-24)
Comment 4 Roman Eisele 2012-06-03 03:41:27 UTC
Created attachment 62442 [details]
For comparison: readable vertical rulers in Impress (Master build 2012-05-24)
Comment 5 Roman Eisele 2012-06-03 03:45:55 UTC
@Kendy:
I am afraid this bug is for you ;-)

Unlike the other problems in the UI of LibreOffice for MacOS X which I have reported (and am still reporting), this is a major one: it makes the vertical rulers more or less unusable, therefore it should be fixed soon.

Thank you very much in advance!
Comment 6 Not Assigned 2012-06-04 07:38:26 UTC
Norbert Thiebaud committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1802271ac4aef34a7957a1fac492daa788d1d984

fdo#50631: Fix the bounding box of rotated glyphs on MacOSX.
Comment 7 Roman Eisele 2012-06-06 11:03:32 UTC
(In reply to comment #6)
> Norbert Thiebaud committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=1802271ac4aef34a7957a1fac492daa788d1d984
> 
> fdo#50631: Fix the bounding box of rotated glyphs on MacOSX.

FYI:
I am not sure if I understand correctly what 'It has been pushed to "master"' means at the moment (we are in the 3.6 branching process), but IMHO the problem is still present in

LOdev version 3.7.0alpha0+
Build ID: d0c3c24
Pull time: 2012-06-06 06:02:23
Installation file: master~2012-06-06_06.02.23_LibO-Dev_3.7.0alpha0_MacOS_x86_install_en-US.dmg

from

http://dev-builds.libreoffice.org/daily/MacOSX-Intel@1-built_no-moz_on_10.6.8/master/2012-06-06_06.02.23/

The rulers still look as reported (not readable). I will attach a screenshot.

If this is intentional, and if I am doing the test wrong, just forget this and forgive me; I just want to help ...
Comment 8 Roman Eisele 2012-06-06 11:04:10 UTC
Created attachment 62677 [details]
Unreadable vertical rulers in Writer (Master build 2012-06-06)
Comment 9 Roman Eisele 2012-06-14 09:00:29 UTC
For your information:
Still REPRODUCIBLE in LibreOffice 3.6.0beta1 (Build ID: 1f1cdd8).

No new screenshot necessary, because everything looks still like in the original screenshots, e.g. attachment 62439 [details].
Comment 10 Roman Eisele 2012-06-14 09:04:41 UTC
(In reply to comment #6)
> Norbert Thiebaud committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=1802271ac4aef34a7957a1fac492daa788d1d984
> 
> fdo#50631: Fix the bounding box of rotated glyphs on MacOSX.

If I take a look at my own screenshots, I get the impression that the problem is *not* the bounding box of the rotated glyphs, but their *position*: they look like shifted to the left outside of the ruler/window ...
Comment 11 Italo Vignoli 2012-07-11 15:30:58 UTC
The same problem, of course, applies to Draw with version 3.6.0.0.beta3 (Build ID: 3e2b862). I also agree on the fact that numbers look like they have been moved to the left, just out of the ruler boundaries.
Comment 12 Thorsten Behrens (allotropia) 2012-07-22 14:42:51 UTC
Fixed on master and -3-6, awaiting review for 3.6.0
Comment 13 Not Assigned 2012-07-22 14:43:30 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5bfba6ee21b5576c9da475b13d7db0f735f078d2&g=libreoffice-3-6

Fix fdo#50631 - have GetTextBoundRect() properly rotate bounds


It will be available in LibreOffice 3.6.1.
Comment 14 Not Assigned 2012-07-22 14:49:35 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f5a9171ef2093fdae595674dc1b3ab2868cc8c8

Fix fdo#50631 - have GetTextBoundRect() properly rotate bounds
Comment 15 Roman Eisele 2012-07-22 14:51:04 UTC
(In reply to comment #12)
> Fixed on master and -3-6, awaiting review for 3.6.0

Thank you very very much for fixing this!
Comment 16 Not Assigned 2012-07-23 16:10:09 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9e000361a29c4894d64c0b0a03622323a19b6a0&g=libreoffice-3-6-0

Fix fdo#50631 - have GetTextBoundRect() properly rotate bounds


It will be available already in LibreOffice 3.6.0.
Comment 17 Roman Eisele 2012-07-25 06:05:21 UTC
VERIFIED/FIXED with LOdev 3.7.0.0.alpha0+ (Build ID: c549e1e; installation file: master~2012-07-25_02.21.07_LibO-Dev_3.7.0.0.alpha0_MacOS_x86_install_en-US.dmg).

In the current master build, the vertical rulers are readable as before. Thank you very much again for fixing this bug!
Comment 18 Roman Eisele 2012-07-25 13:06:52 UTC
*** Bug 52083 has been marked as a duplicate of this bug. ***
Comment 19 Roman Eisele 2012-07-26 16:21:31 UTC
Also VERIFIED FIXED with LibreOffice 3.6.0.3 (Build ID: 61d5034).
Comment 20 Martin Srebotnjak 2013-07-01 08:38:14 UTC
I see this again on 4.1RC1 on OSX 10.8.4.