fdo#50631: Fix the bounding box of rotated glyphs on MacOSX.

Similarly to Ifb04d4a8e485182c5ef2771025b06832bfd75ae0 (commit
ac25f124858b79e302adcc533d6a658d5c529394), we need to rotate the bounding
box of glyphs on MacOSX too.

Additionally, round the position up, and convert the size more
straight-forward way.

Change-Id: Idf7a077836e65072795c6d98d61925ce62ee35b7